Fix dark mode skeleton color

--- a/frontend/src/app/[locale]/global.css
+++ b/frontend/src/app/[locale]/global.css
@@ -57,7 +57,7 @@
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 0 0% 85%;
 
-    --muted: 217.2 32.6% 17.5%;
+    --muted: 0 0% 60%;
     --muted-foreground: 215 20.2% 65.1%;
 
     --accent: 217.2 32.6% 17.5%;
